--- a/index.html
+++ b/index.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Todo List</title>
-  </head>
-  <body>
-    <div id="myDIV" class="header">
-      <h1>To Do List</h1>
-
-      <span onclick="newElement()" class="addBtn">Add</span>
-      <input type="text" id="myInputField" placeholder="Eg Adopt an owl">
-    </div>
-    <section id="newTask">
-    <ul id="myUL">
-    </ul>
-    </section>
-    <script src="script.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Beautiful Todo List</title>
+</head>
+<body>
+  <div id="myDIV" class="header">
+    <h1>✨ Todo List ✨</h1>
+    <span onclick="newElement()" class="addBtn">Add Task</span>
+    <input type="text" id="myInputField" placeholder="Eg. Adopt an owl">
+  </div>
+  <section id="newTask">
+    <ul id="myUL"></ul>
+  </section>
+  <script src="script.js"></script>
+</body>
 </html>
